--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "lime>=0.2.0.1",
     "matplotlib>=3.10.6",
+    "notebook>=7.4.7",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "scikit-learn>=1.7.2",
