--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Template Repository fuer die Vorlesung Data Analytics"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chardet>=5.2.0",
     "ipykernel>=6.30.1",
     "lime>=0.2.0.1",
     "matplotlib>=3.10.6",
