--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "notebook>=7.4.7",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
+    "pandas-stubs==2.3.2.250926",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.5",
